# stoichkitweb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
deploy/: deploy.sh  stoichkitweb.service
skw/: package-lock.json
skw/public/: about.html  index.html
skw/src/: App.css  App.js
src/: main.rs
web/: Dockerfile  index.html  package-lock.json  package.json
web/public/: index.html
web/src/: App.css  App.js  index.js
